hotfix - mobile navbar, added z-index for opacity issue

--- a/_sass/1-modules/header.sass
+++ b/_sass/1-modules/header.sass
@@ -4,6 +4,7 @@
     position: sticky
     top: 0px
     background-color: $white
+    z-index: 500
 
     &.stuck
         box-shadow: 0px 1px 10px $blue2
